Added Terminal Output and fixed minor issues in the GUI